# cost-xray

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.github/workflows/: ci.yml
cost_xray/: __init__.py  addon.py  analyze.py  classify.py  claude_login.py  cost.py  count_tokens.py  detectors.py  drill.py  events.py  materialize.py  materialize_daemon.py  pricing_map.py  raw_codec.py  tui.py  tui_app.py  verify.py
cost_xray/adapters/: __init__.py  anthropic.py  naming.py  openai.py
docs/: architecture.md  install.md
docs/providers/: README.md  claude-code.md  codex.md
experiments/: benchmark.py  tiktoken_vs_diff.py
scripts/: refresh_pricing.py
tests/: conftest.py  test_adapters.py  test_addon.py  test_analyze.py  test_claude_login.py  test_cost.py  test_count_tokens.py  test_drill.py  test_live_count_tokens.py  test_materialize.py  test_materialize_daemon.py  test_pricing_map.py  test_raw_codec.py  test_reconcile.py  test_run_sh.py  test_tui.py  test_tui_app.py  test_verify.py  test_verify_anthropic.py  test_verify_codex.py
